fix(website): fix poor contrast for focus indicator playground code editor in dark mode

--- a/apps/documentation/src/components/Playground/Playground.scss
+++ b/apps/documentation/src/components/Playground/Playground.scss
@@ -1,4 +1,5 @@
-@use '~@entur/tokens/dist/styles.scss' as tokens;
+@use '@entur/tokens/dist/styles.scss' as tokens;
+@use '@entur/tokens/dist/base.scss';
 
 .playground {
   &__header {
@@ -110,68 +111,69 @@
     }
   }
 
-  $editor-background: #1e1e1e;
-  &__editor {
-    position: relative;
-    border-radius: tokens.$border-radiuses-medium;
-    border-top-left-radius: 0;
-    border-top-right-radius: 0;
+  &__expandable {
     margin-bottom: 2rem;
-    overflow-x: auto;
 
-    background-color: $editor-background;
-    font-family: monospace;
+    $editor-background: #1e1e1e;
+    &__editor {
+      position: relative;
+      overflow-x: auto;
 
-    &:focus-within {
-      outline: tokens.$outlines-focus;
-      outline-offset: tokens.$outline-offsets-focus;
-    }
-
-    & .token:last-of-type {
-      margin-right: 1rem;
-    }
-
-    // styling to make the scrollbar fit in with code theme
-    --scrollbar-color: transparent;
-    &:hover {
-      --scrollbar-color: lightgrey;
-    }
-    scrollbar-color: var(--scrollbar-color) $editor-background;
-    &::-webkit-scrollbar {
-      height: 1rem;
-    }
-    &::-webkit-scrollbar-track {
       background-color: $editor-background;
-      border-radius: 0 0 tokens.$border-radiuses-medium tokens.$border-radiuses-medium;
-      margin-inline: tokens.$space-extra-small2;
-    }
-    &::-webkit-scrollbar-thumb {
-      background-color: var(--scrollbar-color);
-      border: solid 0.25rem $editor-background;
-      border-radius: 0.5rem;
-      padding-block: tokens.$space-extra-small;
-      &:hover {
-        --scrollbar-color: grey;
+      font-family: monospace;
+
+      &:focus-within {
+        outline: tokens.$outlines-focus;
+        outline-color: var(--basecolors-stroke-focus-standard);
+        outline-offset: tokens.$outline-offsets-focus;
       }
-    }
 
-    pre {
-      counter-reset: token-line;
-      padding-left: 0 !important; // "!important" needed to overwrite inline styling
+      & .token:last-of-type {
+        margin-right: 1rem;
+      }
 
-      .token-line {
-        white-space: pre;
-        &::before {
-          // line numbers formating
-          counter-increment: token-line;
-          content: counter(token-line);
+      // styling to make the scrollbar fit in with code theme
+      --scrollbar-color: transparent;
+      &:hover {
+        --scrollbar-color: lightgrey;
+      }
+      scrollbar-color: var(--scrollbar-color) $editor-background;
+      &::-webkit-scrollbar {
+        height: 1rem;
+      }
+      &::-webkit-scrollbar-track {
+        background-color: $editor-background;
+        border-radius: 0 0 tokens.$border-radiuses-medium tokens.$border-radiuses-medium;
+        margin-inline: tokens.$space-extra-small2;
+      }
+      &::-webkit-scrollbar-thumb {
+        background-color: var(--scrollbar-color);
+        border: solid 0.25rem $editor-background;
+        border-radius: 0.5rem;
+        padding-block: tokens.$space-extra-small;
+        &:hover {
+          --scrollbar-color: grey;
+        }
+      }
 
-          width: 2rem;
-          display: inline-block;
-          text-align: right;
-          user-select: none;
+      pre {
+        counter-reset: token-line;
+        padding-left: 0 !important; // "!important" needed to overwrite inline styling
 
-          margin-right: 1rem;
+        .token-line {
+          white-space: pre;
+          &::before {
+            // line numbers formating
+            counter-increment: token-line;
+            content: counter(token-line);
+
+            width: 2rem;
+            display: inline-block;
+            text-align: right;
+            user-select: none;
+
+            margin-right: 1rem;
+          }
         }
       }
     }
